# vehicle-sales-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init-db.sql  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  database.py  main.py
app/core/: config.py
app/models/: __init__.py  models.py
app/routers/: __init__.py  sales.py  vehicles.py  webhook.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  sale_service.py  vehicle_client.py
k8s/: deployment.yaml  service.yaml
tests/: conftest.py  test_main.py  test_sales.py  test_schemas.py  test_services.py  test_vehicle_client.py  test_vehicles.py  test_webhook.py
